--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.14",
     "autoprefixer": "^10.4.21",
     "lodash.truncate": "^4.4.2",
     "lucide-react": "^0.545.0",
